--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   top: 0;
   z-index: 30;
   backdrop-filter: blur(50px);
-  border-bottom: 1px solid grey;
+  /* border-bottom: 1px solid grey; */
 }
 
 .nav-content {
