--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -42,6 +42,10 @@
   height: 0.2rem;
 }
 
+.greet-content h3{
+  font-weight: 400;
+}
+
 .hero-content h2 {
   font-size: 3.8rem;
   font-weight: 600;
@@ -103,9 +107,9 @@
     box-shadow: 0px 0px 10px #a993fe;
 }
 
-.main-img:hover{
+/* .main-img:hover{
     box-shadow: 0px 0px 20px #a993fe;
-}
+} */
 
 .tech-icon img {
   width: 3rem;
