Navigation Changes Pushed

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@
   box-sizing: border-box;
 }
 
-body{
+body {
   color: #fff;
   background-color: #060417;
+}
+
+html {
+  scroll-behavior: smooth;
 }
