--- a/src/components/ContactMe/ContactInfoCard/ContactInfoCard.css
+++ b/src/components/ContactMe/ContactInfoCard/ContactInfoCard.css
@@ -35,8 +35,18 @@
 }
 
 .contact-details-card p a {
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   font-weight: 400;
   text-decoration: none;
+  color: #a892fe;
+  background: transparent;
+  border: 1.5px solid #a892fe;
+  border-radius: 0.2rem;
+  padding: 0.1rem 0.3rem;
+  transition: all 0.3sease;
+}
+
+.contact-details-card p a:hover {
   color: #fff;
+  background: linear-gradient(90deg, #a892fe 0%, #8064e8 100%);
 }
